tests/functional/lang/eval-fail-assert-nested-bool.err.exp
error:
       … while evaluating the condition of the assertion '({ a = { b = [ ({ c = { d = true; }; }) ]; }; } == { a = { b = [ ({ c = { d = false; }; }) ]; }; })'
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:1:
            1| assert
             | ^
            2|   { a.b = [ { c.d = true; } ]; }

       … while comparing attribute 'a'

       … where left hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:2:5:
            1| assert
            2|   { a.b = [ { c.d = true; } ]; }
             |     ^
            3|   ==

       … where right hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:4:5:
            3|   ==
            4|   { a.b = [ { c.d = false; } ]; };
             |     ^
            5|

       … while comparing attribute 'b'

       … where left hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:2:5:
            1| assert
            2|   { a.b = [ { c.d = true; } ]; }
             |     ^
            3|   ==

       … where right hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:4:5:
            3|   ==
            4|   { a.b = [ { c.d = false; } ]; };
             |     ^
            5|

       … while comparing list element 0

       … while comparing attribute 'c'

       … where left hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:2:15:
            1| assert
            2|   { a.b = [ { c.d = true; } ]; }
             |               ^
            3|   ==

       … where right hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:4:15:
            3|   ==
            4|   { a.b = [ { c.d = false; } ]; };
             |               ^
            5|

       … while comparing attribute 'd'

       … where left hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:2:15:
            1| assert
            2|   { a.b = [ { c.d = true; } ]; }
             |               ^
            3|   ==

       … where right hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:4:15:
            3|   ==
            4|   { a.b = [ { c.d = false; } ]; };
             |               ^
            5|

       error: boolean 'true' is not equal to boolean 'false'
